refactor(social): remove unused DTOs and purge personal gamification metrics